@@ -1,6 +1,0 @@
-%Error-UNSUPPORTED: t/t_func_recurse.v:9:27: Unsupported: Recursive function or task call: 'recurse_self'
-                                           : ... In instance t
-    9 |    function automatic int recurse_self;
-      |                           ^~~~~~~~~~~~
-                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
-%Error: Exiting due to
